docs(troubleshooting): the aquifer duck, the client SIGBUS, the stale dev
T79 states its fix in place rather than an open symptom, with the three
constraints that stop someone undoing it: the technique needs an interface
target, answering null loses nothing because the jar holds no instanceof,
and the preApply line is the only proof of application.

T83 covers a consumer dev that lags the scaffold, where an unknown flag is
read back as an instance name and the sanctioned repair costs the link.
P6 covers a client JVM SIGBUS with no measured fix, recorded for how it
changes the reading of a failed run.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01ARedYgCY1xhtLe8MaXsvzg